<resources>
    <string name="app_name">Sopranote</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pitch">pitch will display here!</string>
    <string name="noteName">noteName will display here!</string>
    <string name="TempoInputButtonText">Tempo</string>
    <string name="StopButtonText">Stop</string>
    <string name="stopWritingButtonText">Display Notes</string>
    <string name="writeArrayButtonText">Start Recording</string>
    <string name="displayNotesText">Notes will display here</string>
    <string name="stopRecordingButtonText">Stop Recording</string>
    <string name="StopMetronomeText">Stop Metronome</string>
    <string name="SetMetronomeText">Set Metronome</string>

</resources>
