<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parchment">

    <ImageView
        android:id="@+id/staff"
        android:layout_width="match_parent"
        android:layout_height="296dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/staff" />

    <ImageView
        android:id="@+id/F"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/backwards_note" />

    <ImageView
        android:id="@+id/E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        app:srcCompat="@drawable/backwards_note" />

    <ImageView
        android:id="@+id/D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/backwards_note" />

    <ImageView
        android:id="@+id/C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        app:srcCompat="@drawable/backwards_note" />

    <ImageView
        android:id="@+id/B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/quarter_note" />

    <ImageView
        android:id="@+id/A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        app:srcCompat="@drawable/quarter_note" />

    <ImageView
        android:id="@+id/G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/quarter_note" />

    <TextView
        android:id="@+id/txtNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:fontFamily="casual"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/txtFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:fontFamily="cursive"
        android:textSize="24sp" />

    <Button
        android:id="@+id/TempoInputButton"
        android:layout_width="114dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="646dp"
        android:layout_marginEnd="297dp"
        android:layout_marginBottom="17dp"
        android:text="@string/SetMetronomeText"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/tempo"
        android:layout_width="91dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="175dp"
        android:layout_marginTop="613dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="80dp"
        android:text="Tempo"
        android:textSize="20dp" />

    <Button
        android:id="@+id/tempoStopButton"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="303dp"
        android:layout_marginTop="646dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="18dp"
        android:text="@string/StopMetronomeText"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Button
        android:id="@+id/WriteArrayButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="455dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="216dp"
        android:text="@string/writeArrayButtonText"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Button
        android:id="@+id/StopRecording"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="284dp"
        android:layout_marginTop="455dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="216dp"
        android:text="@string/stopRecordingButtonText"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/displayNotes"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="353dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="338dp"
        android:text="@string/displayNotesText" />

</RelativeLayout>